--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="route">Route</string>
     <string name="clear">Clear</string>
     <string name="loading">Please wait!</string>
+    <string name="error_tag">error</string>
 </resources>
